--- a/src/styles/components/products/productDetail.css
+++ b/src/styles/components/products/productDetail.css
@@ -78,6 +78,7 @@
 
 /* Swiper */
 .MobileImageSlider_swiper {
+  position: relative;
   width: 100%;
   height: 100%;
 }
@@ -108,6 +109,7 @@
 }
 
 .MobileImageSlider_arrow {
+  border: 1px solid #a5a5a5;
   width: 3rem;
   height: 3rem;
   border-radius: 100%;
@@ -117,7 +119,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: none;
   cursor: pointer;
   transition: all 0.2s ease;
 }
