--- a/src/styles/allCssImport.css
+++ b/src/styles/allCssImport.css
@@ -15,6 +15,7 @@
 
 
 @import "./components/buttons.css";
+@import "./components/skeleton.css";
 
 @import "./components/account/accountLeftSlide.css";
 @import "./components/account/forms.css";
