--- a/src/styles/components/common/shopCard.css
+++ b/src/styles/components/common/shopCard.css
@@ -9,6 +9,7 @@
   border-bottom: 1px solid #e6e6e6;
 }
 .shopCard_hoverImg {
+  background-color: white;
   position: absolute;
   transition: all 0.3s ease-in-out;
   z-index: 2;
