--- a/src/styles/components/common/mobileheader.css
+++ b/src/styles/components/common/mobileheader.css
@@ -68,7 +68,7 @@
   left: -100%;
   top: 0;
   width: 100%;
-  height: 100svh;
+  height: 100dvh;
   background-color: #FFFDF6;
   color: #2E2D2B;
   padding: 1.25rem; /* 20px */
