--- a/src/styles/components/home/socialReels.css
+++ b/src/styles/components/home/socialReels.css
@@ -68,11 +68,12 @@
 
 /* Text */
 .socialCard_title {
-  width: 90%;
-  line-height: 2.5rem !important;
+  width: 100%;
+  line-height: 2rem !important;
 }
 .socialCard_title span {
   color: white !important;
+  line-height: 0 !important;
 }
 
 .socialCard_description {
@@ -85,6 +86,10 @@
    DESKTOP (≥ 750px)
 --------------------------------------------- */
 @media (min-width: 750px) {
+  .socialCard_title {
+  width: 90%;
+  line-height: 2.5rem !important;
+}
   /* Header spacing adjustment */
   .social_header {
     margin-top: 8rem;
