--- a/src/styles/components/home/category.css
+++ b/src/styles/components/home/category.css
@@ -12,11 +12,11 @@
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
-
-  /* Mobile scroll */
-  overflow-x: auto;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  -webkit-overflow-scrolling: touch;
   scrollbar-width: none;
+  touch-action: pan-x; 
 }
 
 .home_category_paren::-webkit-scrollbar {
@@ -24,10 +24,12 @@
 }
 
 .home_category_inner {
-  width: 100%;
   display: flex;
   gap: 0.5rem;
+
+  width: max-content; /* ✅ KEY FIX */
 }
+
 
 /* -----------------------------------
    CATEGORY BOX
@@ -73,8 +75,13 @@
   }
 
   .home_category_paren {
+      margin: 1rem 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
     margin: 2rem 0;
-    overflow: hidden; /* Desktop grid, no scroll */
+    overflow: hidden; 
   }
 
   .home_category_inner {
