--- a/src/styles/pages/login.css
+++ b/src/styles/pages/login.css
@@ -2,7 +2,7 @@
   width: 100%;
   background-color: #fff;
   overflow: hidden;
-  height: 100vh;
+  height: 100svh;
   margin: auto auto;
   display: flex;
 }
