--- a/src/styles/pages/checkout.css
+++ b/src/styles/pages/checkout.css
@@ -440,9 +440,7 @@
 
 @media (min-width: 768px) {
   .checkout_summaryWrapper {
-    color: #000;
     border-radius: 0;
-    background: #fff;
     padding: 2rem;
     /* box-shadow: 0px 0px 0.25rem 0.25rem #00804f21; */
     border: 1px solid rgba(0, 0, 0, 0.1);
@@ -502,25 +500,34 @@
   margin-bottom: 1.25rem;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
+.checkout_productName {
+  color: white !important;
+}
+.checkout_btn .green_box_btn,
+.checkout_couponBtn .green_box_btn {
+  background-color: white;
+  color: #174d38;
+  font-weight: 600;
+}
+.checkout_btn .green_box_btn:hover,
+.checkout_couponBtn .green_box_btn:hover {
+  background-color: transparent;
+  color: #ffffff;
+  font-weight: 600;
+  border: 1px solid white;
+}
+
+.checkout_subtotalText,
+.checkout_subtotalValue {
+  
+  color: white !important;
+}
 @media (max-width: 750px) {
-  .checkout_productName {
-    color: white !important;
-  }
   .checkout_borderRow {
     border-bottom: 1px solid rgba(194, 194, 194, 0.331);
   }
 
-  .checkout_btn .green_box_btn,
-  .checkout_couponBtn .green_box_btn {
-    background-color: white;
-    color: #174d38;
-    font-weight: 600;
-  }
 
-  .checkout_subtotalText,
-  .checkout_subtotalValue {
-    color: white !important;
-  }
 }
 .checkout_paymentImg {
   width: 40%;
