--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -58,6 +58,9 @@ button {
   width: 100%;
   height: 100%;
 }
+.text_decoration_underline{
+  text-decoration: underline;
+}
 .underline:hover{
   text-decoration: underline !important;
 }
