--- a/src/styles/pages/checkout.css
+++ b/src/styles/pages/checkout.css
@@ -195,7 +195,6 @@
   padding-right: 3rem;
   border: 1px solid #00000050 !important;
   outline: none;
-  color: #000; /* normal text */
   transition: all 0.1s ease;
 }
 .checkOut_input:disabled {
@@ -206,6 +205,10 @@
 .checkOut_input:has(input:disabled) {
   pointer-events: none;
   border: 1px solid #00000023 !important;
+}
+.checkOut_input_pren:has(select:disabled) .select_arrow {
+  opacity: 0.3;
+  pointer-events: none;
 }
 .delivery__phone_btn:has(input:disabled) {
   pointer-events: none;
