--- a/src/styles/components/account/forms.css
+++ b/src/styles/components/account/forms.css
@@ -2,11 +2,35 @@
 .address_form_paren,
 .password_form_paren,
 .subscription_form_paren {
+  padding-top: 1rem;
   width: 100%;
   height: 0;
   overflow: hidden;
 }
-.edit_address_btn{
+.settings_inp_flex {
+  display: flex;
+  gap: 0.75rem;
+}
+@media (min-width: 750px) {
+  .details_form_paren,
+  .address_form_paren,
+  .password_form_paren,
+  .subscription_form_paren {
+    padding-top: 2rem;
+  }
+  .settings_inp_flex {
+    gap: 2rem;
+  }
+}
+
+.settings_btn {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  justify-content: start;
+  width: 40%;
+}
+.edit_address_btn {
   margin-top: 1rem;
 }
 .inp_paren {
@@ -14,10 +38,14 @@
   position: relative;
   width: 100%;
 }
+.some_margin {
+  margin-bottom: 0.5rem;
+}
 .inp_paren span {
   color: red;
 }
-.inp_paren input , .settings_input {
+.inp_paren input,
+.settings_input {
   padding-left: 1rem;
   padding-right: 3rem;
   outline: none;
@@ -26,11 +54,10 @@
   width: 100%;
   height: 3.5rem;
 }
-.settings_input span{
+.settings_input span {
   color: black;
 }
-.settings_input .react-international-phone-country-selector{
-  transform: translateY(.25rem);
+.settings_input .react-international-phone-country-selector {
   z-index: 99 !important;
 }
 .input_error_msg {
@@ -56,52 +83,49 @@
   background-color: #313131;
   display: flex;
   color: white;
-  border-radius: 4px;
   align-items: center;
   justify-content: center;
 }
 .cancel_form_btn {
   width: 100%;
   text-transform: uppercase;
-  margin-top: 1rem;
-  height: 3rem;
+  height: 3.5rem;
+  padding-inline: 1.5rem;
   border: 1px solid #313131;
   display: flex;
-  color: #313131 ;
+  color: #313131;
   align-items: center;
   justify-content: center;
 }
 
-.subscription_div{
+.subscription_div {
   width: 100%;
   display: flex;
   margin-bottom: 2rem;
   align-items: center;
   justify-content: space-between;
 }
-.subscription_btn_paren{
+.subscription_btn_paren {
   width: 25%;
 }
 
 .subscribe_btn {
   width: 100%;
   text-transform: uppercase;
-  padding: 0.6rem .5rem;
+  padding: 0.6rem 0.5rem;
   background-color: #174d38;
   display: flex;
   color: white;
-  border-radius: 4px;
   align-items: center;
   justify-content: center;
 }
 .unSubscribe_btn {
   width: 100%;
   text-transform: uppercase;
-  padding: 0.6rem .5rem;
+  padding: 0.6rem 0.5rem;
   border: 1px solid #313131;
   display: flex;
   color: #313131;
-  border-radius: 4px;
   align-items: center;
   justify-content: center;
 }
