--- a/src/styles/components/account/settings.css
+++ b/src/styles/components/account/settings.css
@@ -1,21 +1,20 @@
 .settings {
   width: 100%;
-  padding-bottom: 5rem;
-  padding-top: 6rem;
   display: flex;
   flex-direction: column;
 }
 
 @media (min-width: 750px) {
   .settings {
-    padding-top: 8rem;
     flex-direction: row;
+  }
+  .settings__left {
+    position: sticky;
+    top: 8rem;
+    height: 70vh; 
   }
 }
 
-.settings__left {
-  display: block;
-}
 
 
 .settings__breadcrumb {
@@ -45,7 +44,6 @@
 
 @media (min-width: 750px) {
   .settings__content {
-    width: 60%;
     padding-top: 0;
     padding-left: 5rem;
     padding-right: 5rem;
@@ -62,13 +60,11 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 2.5rem;
 }
 
 @media (min-width: 750px) {
   .settings__sections {
-    width: 30rem;
-    gap: 3rem;
+    width: 50rem;
   }
 }
 
