--- a/src/styles/components/home/featuredCollection.css
+++ b/src/styles/components/home/featuredCollection.css
@@ -77,22 +77,23 @@
   align-items: center;
   border-radius: 10rem;
   transition: opacity 0.3s;
-  padding: 1.5rem;
+  padding: 1rem;
   scale: 0.6;
   background-color: rgb(236, 236, 236);
-}
-
-.mySwiper .swiper-button-next:hover,
-.mySwiper .swiper-button-prev:hover {
-  opacity: 0.7;
 }
 
 /* Desktop variations */
 @media (min-width: 750px) {
   .mySwiper .swiper-button-next,
   .mySwiper .swiper-button-prev {
-    padding: 0.8rem;
+    transition: all 0.6s cubic-bezier(0.19, 1, 0.22, 1) 0s;
+    padding: 1rem;
     scale: 0.8;
     background-color: #fff;
+  }
+  .mySwiper .swiper-button-next:hover,
+  .mySwiper .swiper-button-prev:hover {
+    background-color: #174d38;
+    color: white !important;
   }
 }
