--- a/src/styles/components/products/products.css
+++ b/src/styles/components/products/products.css
@@ -31,13 +31,55 @@
   line-height: 1.25rem;
 }
 
-.products_header {
+.category_products_header {
   width: 100%;
-  text-align: center;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
   gap: 1rem;
   margin-top: 4rem;
+}
+.products_header {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-between;
+  gap: 1rem;
+  margin-top: 4rem;
+}
+.products_title {
+  margin-top: 1rem;
+}
+.filter_btn {
+  width: 100%;
+  position: relative;
+}
+
+.filter_select {
+  width: 100%;
+  padding: 0.75rem 0rem;
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  background-color: #fff;
+  cursor: pointer;
+
+  /* Remove default arrow */
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+
+  /* Custom arrow */
+  background-image: url("data:image/svg+xml,%3Csvg width='12' height='8' viewBox='0 0 12 8' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 1l5 5 5-5' stroke='%23000' stroke-width='1.5' fill='none'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 1rem center;
+  background-size: 0.75rem;
+}
+
+.filter_select:focus {
+  outline: none;
+  border-color: #174d38;
 }
 
 .allproducts_paren {
@@ -71,21 +113,24 @@
   }
 
   .products_content {
-  width: 40rem;
-  padding-block: 3rem;
-  margin-left: 3rem;
-}
+    width: 40rem;
+    padding-block: 3rem;
+    margin-left: 3rem;
+  }
   .products_content h2 {
     margin-bottom: 1.5rem;
   }
 
   .products_header {
-    width: 100%;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    margin-top: 4rem;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 5rem;
+    margin-top: 5rem;
+  }
+
+  .filter_btn {
+    width: 20rem;
   }
 
   .allproducts_paren {
