--- a/src/styles/pages/checkout.css
+++ b/src/styles/pages/checkout.css
@@ -176,6 +176,7 @@
 }
 
 .checkout_thin_line {
+  margin-bottom: 2rem;
   width: 100%;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
@@ -577,28 +578,42 @@
 
 .status_section {
   height: 100vh;
-  flex-direction: column;
-  width: 100%;
-  gap: 2rem;
+ width: 100%;
+}
+.status_section_inner{
+  width: 80%;
+  overflow: hidden;
+  /* border: 1px solid #174d385f; */
+  box-shadow: 0px 0px 0.5rem 0.5rem #00804f21;
   display: flex;
-  text-align: center;
+  flex-direction: column;
   align-items: center;
+  border-radius: .25rem;
   justify-content: center;
+  gap: 2rem;
+  padding: 1rem;
+  padding-inline: 1.5rem;
 }
-.status_section img {
-  width: 20rem;
+.status_img_pren{
+    width: 60%;
 }
-.status_section p {
-  width: 90%;
-  text-align: center;
+@media (min-width:750px) {
+  .status_section_inner{
+  width: 35%;
+  overflow: hidden;
+  /* border: 1px solid #174d385f; */
+  box-shadow: 0px 0px 0.5rem 0.5rem #00804f21;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: .25rem;
+  justify-content: center;
+  gap: 2rem;
+  padding: 2rem;
+  padding-inline: 3rem;
 }
-@media (min-width: 750px) {
-  .status_section p {
-    width: 30%;
-    text-align: center;
-  }
+.status_img_pren{
+    width: 40%;
 }
-
-.status_section a:hover {
-  text-decoration: underline;
+  
 }
