--- a/src/styles/components/common/header.css
+++ b/src/styles/components/common/header.css
@@ -72,8 +72,6 @@
   cursor: pointer;
   text-transform: uppercase;
 }
-
-/* Hover underline */
 .hover_text {
   position: relative;
   width: fit-content;
@@ -84,18 +82,31 @@
   content: "";
   position: absolute;
   left: 0;
-  bottom: 0.1rem;
+  bottom: -.15rem;
   width: 0;
-  height: 0.1rem;
+  height: .1rem;
   background-color: #fff;
   border-radius: 20rem;
   mix-blend-mode: difference;
   transition: width 0.3s ease;
 }
 
+/* hover */
 .hover_text:hover::after {
   width: 100%;
 }
+
+/* active (current route) */
+.hover_text.active {
+  text-decoration: none;
+  font-weight: 100;
+  width: 100%;
+}
+.hover_text.active::after {
+  height: .1rem;
+  width: 100%;
+}
+
 
 /* ========== Short Links Icons ========== */
 .short_links {
