--- a/src/styles/components/common/mobileheader.css
+++ b/src/styles/components/common/mobileheader.css
@@ -61,6 +61,7 @@
 /* ============================= */
 
 .mobile_menu_classname_open_menu {
+  overflow: hidden;
   position: fixed;
   display: flex;
   flex-direction: column;
@@ -69,7 +70,7 @@
   top: 0;
   width: 100%;
   height: 100dvh;
-  background-color: #FFFDF6;
+  background-color: #ffffff;
   color: #2E2D2B;
   padding: 1.25rem; /* 20px */
   padding-bottom: 2rem;
@@ -98,6 +99,9 @@
   display: flex;
   flex-direction: column;
   gap: 3rem;
+}
+.links_paren .home_category_paren{
+  margin-top: 1rem;
 }
 .menu_links_iner{
   padding-bottom: .5rem;
