--- a/src/styles/components/common/shopCard.css
+++ b/src/styles/components/common/shopCard.css
@@ -38,8 +38,10 @@
   background: white;
   height: 25%;
   width: 100%;
-  padding: 0.75rem; /* 12px */
+  padding: 0.75rem;
+  /* 12px */
 }
+
 .shopCard_item_name {
   width: 90%;
   /* white-space: nowrap;      */
@@ -64,9 +66,11 @@
   padding-inline: 0.5rem;
   padding-block: 0.3rem;
 }
+
 .ribbon_btn p {
   transform: translateY(0.05rem);
 }
+
 .heart_icon {
   position: absolute;
   z-index: 99;
@@ -77,10 +81,12 @@
   align-items: center;
   gap: 1.5rem;
 }
+
 .icon_pr {
   cursor: pointer;
   position: relative;
 }
+
 .short_links_icon_heart_hover {
   transition: all 0.3s ease-in-out;
   opacity: 0;
@@ -88,15 +94,27 @@
   left: 0;
   z-index: 99;
 }
+
 .short_links_icon_heart,
 .short_links_icon_heart_hover {
   width: 1.22rem;
 }
+
 .icon_pr:hover .short_links_icon_heart_hover {
   opacity: 1;
   scale: 1.5;
 }
+
 .icon_pr:hover .short_links_icon_heart {
+  opacity: 0;
+}
+
+.short_links_icon_heart_hover.show_filled {
+  opacity: 1;
+  scale: 1.25;
+}
+
+.short_links_icon_heart.hidden {
   opacity: 0;
 }
 
@@ -104,6 +122,7 @@
   .shopCard_card:hover .shopCard_hoverImg {
     opacity: 1;
   }
+
   .shopCard_card {
     aspect-ratio: 3/ 4;
     width: 100%;
@@ -114,6 +133,7 @@
     border-left: 1px solid #e6e6e6;
     border-bottom: 1px solid #e6e6e6;
   }
+
   .shopCard_hoverImg {
     position: absolute;
     transition: all 0.3s ease-in-out;
@@ -125,6 +145,7 @@
     left: 0;
     opacity: 0;
   }
+
   .shopCard_card:hover .shopCard_hoverImg {
     opacity: 1;
   }
@@ -144,7 +165,8 @@
     background: white;
     height: 12%;
     width: 100%;
-    padding: 1rem; /* 12px */
+    padding: 1rem;
+    /* 12px */
   }
 
   .shopCard_item_price {
@@ -162,10 +184,12 @@
     align-items: center;
     gap: 1.5rem;
   }
+
   .icon_pr {
     cursor: pointer;
     position: relative;
   }
+
   .short_links_icon_heart_hover {
     position: absolute;
     top: -0.2rem !important;
@@ -177,14 +201,17 @@
     left: 0;
     z-index: 99;
   }
+
   .short_links_icon_heart,
   .short_links_icon_heart_hover {
     width: 1.25rem;
   }
+
   .icon_pr:hover .short_links_icon_heart_hover {
     opacity: 1;
     scale: 1.5;
   }
+
   .icon_pr:hover .short_links_icon_heart {
     opacity: 0;
   }
